fix footer alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,6 +12,7 @@ html{
   min-height: 100%;
     background-color: white;
     position: relative;
+    overflow: auto !important;
 
 }
 
